Deletion of posts working and updating view. Too slow though but I think its purely because of the API's limits on network requests taking too long, need to review though to make sure and add a loading component to let user know something is happening. Also block other actions while loading.

--- a/src/assets/scss/layout/_grid.scss
+++ b/src/assets/scss/layout/_grid.scss
@@ -8,8 +8,7 @@
     flex-direction: column;
     @include bp-md {
         flex-direction: row;
-        justify-content: space-between;
-        // align-items: flex-end;
+        
     }
 }
 
