--- a/src/assets/scss/layout/_header.scss
+++ b/src/assets/scss/layout/_header.scss
@@ -1,6 +1,13 @@
 .main-site-header {
     margin-bottom: rem(60);
     .main-nav {
+        .container {
+            display: flex;
+            flex-wrap: wrap;
+            flex-direction: row;
+            justify-content: space-between;
+            align-items: flex-end;
+        }
         .navbar-brand {
             h1 {
                 margin: 0;
